# evm-linux

./: .autotools  .gitignore  .gitmodules  LICENSE  README.md
bsp/bl616/: CMakeLists.txt  lcd_conf_user.h  lv_conf.h  main.c  proj.conf
bsp/bl616/evm/engines/: CMakeLists.txt
bsp/bl616/evm/modules/: CMakeLists.txt
bsp/bl616/fs/: repl.js
bsp/esp32s2/: .gitignore  CMakeLists.txt  README.md
bsp/esp32s2/main/: CMakeLists.txt
bsp/espressif/main/: CMakeLists.txt
modules/gui/lvgl-js/: CMakeLists.txt  evm_module_lvgl.c  evm_module_lvgl.h  evm_module_lvgl_event.c  evm_module_lvgl_image.c  evm_module_lvgl_misc.c  evm_module_lvgl_style.c  evm_module_lvgl_timeout.c  lvgl.json  lvgl_style.json
modules/iotjs/: CMakeLists.txt  bouffalo.mk
modules/iotjs/bouffalolab/: bl_module_gpio.c  bl_module_repl.c  bl_module_uart.c  evm_main.c
modules/iotjs/cmake/: JSONParser.cmake  http-parser.cmake  iotjs.cmake  jerry.cmake  libtuv.cmake  mbedtls.cmake
modules/iotjs/cmake/config/: arm-linux.cmake  arm-nuttx.cmake  arm-tizen.cmake  arm-tizenrt.cmake  i686-linux.cmake  i686-windows.cmake  mips-openwrt.cmake  noarch-linux.cmake  noarch-tizen.cmake  x86_64-darwin.cmake  x86_64-linux.cmake  x86_64-mock.cmake  x86_64-windows.cmake
modules/iotjs/common/: evm_module.c  evm_module_adc.c  evm_module_assert.c  evm_module_buffer.c  evm_module_cffi.c  evm_module_dns.c  evm_module_events.c  evm_module_gpio.c  evm_module_i2c.c  evm_module_libc.c  evm_module_network.c  evm_module_network.h  evm_module_process.c  evm_module_repl.c  evm_module_timers.c  evm_module_uart.c  evm_module_wlan.c
modules/iotjs/config/mbedtls/: config-for-iotjs.h
modules/iotjs/config/tizen/: .gbs.conf  filter.txt  gbsbuild.sh  iotjs_tizen.patch  patch4tizenorg.sh  release.sh  sample.gbs.conf
modules/iotjs/config/tizenrt/: Kconfig.runtime
modules/iotjs/docs/: Developer's-Guide.md  Getting-Started.md  License.md  README.md
modules/iotjs/docs/api/: IoT.js-API-ADC.md  IoT.js-API-Assert.md  IoT.js-API-BLE.md  IoT.js-API-Buffer.md  IoT.js-API-Crypto.md  IoT.js-API-DGRAM.md  IoT.js-API-DNS.md  IoT.js-API-Events.md  IoT.js-API-File-System.md  IoT.js-API-GPIO.md  IoT.js-API-HTTP-Signature.md  IoT.js-API-HTTP.md  IoT.js-API-HTTPS.md  IoT.js-API-I2C.md  IoT.js-API-MQTT.md  IoT.js-API-Module.md  IoT.js-API-N-API.md  IoT.js-API-Net.md  IoT.js-API-PWM.md  IoT.js-API-Process.md  IoT.js-API-SPI.md  IoT.js-API-Stream.md  IoT.js-API-TLS.md  IoT.js-API-Timers.md  IoT.js-API-UART.md  IoT.js-API-WebSocket.md  IoT.js-API-reference.md
modules/iotjs/docs/contributing/: Assigned-People.md  Community-Guidelines.md  Governance.md  Patch-Submission-Process.md
modules/iotjs/docs/devs/: API-Document-Guidelines.md  Advanced-Development.md  Coding-Style-Guidelines.md  Developer-Tutorial.md  Development-Process.md  Experimental-Features.md  Extended-API-Guidelines.md  Inside-IoT.js.md  IoT.js-Developer's-Certificate-of-Origin-1.0.md  IoT.js-Module-Generator.md  IoT.js-Package-(outdated).md  Logging-IoT.js-execution.md  Memory-savings-with-libtuv.md  Native-Module-vs-JS-Module.md  Optimization-Tips.md  Test-Guidelines.md  Use-JerryScript-Debugger.md  Writing-New-Module.md
modules/iotjs/espressif/: esp_module_event.c  esp_module_repl.c  esp_module_uart.c  esp_module_wlan.c  evm_main.c
modules/iotjs/include/: iotjs.h  node_api.h  node_api_types.h
modules/iotjs/linux/: evm_main.c  evm_module_fs.c  evm_module_net.c  evm_module_timers.c  linux_module_gpio.c  linux_module_i2c.c  linux_module_repl.c  linux_module_timers.c
modules/iotjs/profiles/: default.profile  minimal.profile
modules/iotjs/rt-thread/: evm_main.c  evm_module_adc.c  evm_module_gpio.c  evm_module_i2c.c  evm_module_timers.c  evm_module_uart.c  rtt_module_adc.c  rtt_module_gpio.c  rtt_module_i2c.c  rtt_module_repl.c  rtt_module_timers.c  rtt_module_uart.c
modules/iotjs/src/: iotjs.c  iotjs_binding.c  iotjs_binding.h  iotjs_binding_helper.c  iotjs_binding_helper.h  iotjs_compatibility.h  iotjs_debuglog.c  iotjs_debuglog.h  iotjs_def.h  iotjs_env.c  iotjs_env.h  iotjs_magic_strings.h  iotjs_module.c  iotjs_module.h  iotjs_string.c  iotjs_string.h  iotjs_string_ext.c  iotjs_string_ext.h  iotjs_util.c  iotjs_util.h  iotjs_uv_handle.c  iotjs_uv_handle.h  iotjs_uv_request.c  iotjs_uv_request.h  modules.json
modules/iotjs/src/internal/: node_api_internal.h  node_api_internal_types.h
modules/iotjs/src/js/: adc.js  assert.js  ble.js  ble_characteristic.js  ble_descriptor.js  ble_hci_socket.js  ble_hci_socket_acl_stream.js  ble_hci_socket_bindings.js  ble_hci_socket_crypto.js  ble_hci_socket_gap.js  ble_hci_socket_gatt.js  ble_hci_socket_hci.js  ble_hci_socket_hci_status.js  ble_hci_socket_mgmt.js  ble_hci_socket_smp.js  ble_primary_service.js  ble_uuid_util.js  bridge.js  buffer.js  console.js  crypto.js  dgram.js  (+30 more)
modules/iotjs/test/: hello.js  testsets.json
modules/iotjs/tools/: apt-get-install-arm.sh  apt-get-install-deps.sh  apt-get-install-nuttx.sh  apt-get-install-tizen.sh  apt-get-install-tizenrt.sh  apt-get-install-travis-i686.sh  brew-install-deps.sh  check_license.py  check_signed_off.sh  check_sonarqube.sh  check_tidy.py  iotjs-create-module.py  iotjs-generate-module.py  js2c.py  measure_coverage.sh  measure_js_heap.py  mem_stats.sh  repl.js  testrunner.py  travis_script.py
(+2273 files in other folders)
